--- a/tutorials_advanced/agent_annual_report.ipynb
+++ b/tutorials_advanced/agent_annual_report.ipynb
@@ -4,14 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Financial Analyst Agent for Annual Report Writing"
+    "# Financial Analyst Agent for Annual Report Writing\n",
+    "# 财务分析师助手，用于年度报告编写"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "In this demo, we introduce an agent that can analyze financial report."
+    "In this demo, we introduce an agent that can analyze financial report.\n",
+    "\n",
+    "在这个演示中，我们介绍了一个可以分析财务报告的助手。"
    ]
   },
   {
@@ -43,7 +51,12 @@
    "source": [
     "After importing all the necessary packages and functions, we also need the config for OpenAI & SecApi & FMPApi here. \n",
     "- for openai configuration, rename OAI_CONFIG_LIST_sample to OAI_CONFIG_LIST and replace the api keys\n",
-    "- for Sec_api & FMP_api configuration, rename config_api_keys_sample to config_api_keys and replace the api keys"
+    "- for Sec_api & FMP_api configuration, rename config_api_keys_sample to config_api_keys and replace the api keys\n",
+    "\n",
+    "在导入所有必要的包和函数之后，我们还需要配置OpenAI、SecApi和FMPApi。\n",
+    "\n",
+    "- 对于OpenAI配置，将 `OAI_CONFIG_LIST_sample` 重命名为 `OAI_CONFIG_LIST` 并替换API密钥\n",
+    "- 对于Sec_api和FMP_api配置，将 `config_api_keys_sample` 重命名为 `config_api_keys` 并替换API密钥"
    ]
   },
   {
@@ -79,7 +92,14 @@
     "- A user proxy to execute python functions and control the conversations.\n",
     "- An expert agent who is proficient in financial analytical writing.\n",
     "- A shadow/inner-assistant to handle isolated long-context Q&As. (Because we dont want to keep the sec files in the chat history.)\n",
-    "In the following cell, we define the agents, and equip them with necessary tools."
+    "In the following cell, we define the agents, and equip them with necessary tools.\n",
+    "\n",
+    "对于此任务，我们需要：\n",
+    "- 一个用户代理来执行Python函数并控制对话。\n",
+    "- 一位精通财务分析写作的专家助手。\n",
+    "- 一个影子/内助手来处理独立的长上下文问答。（因为我们不希望在聊天记录中保留sec文件。）\n",
+    "\n",
+    "在接下来的代码单元中，我们定义这些助手，并为它们配备必要的工具。"
    ]
   },
   {
@@ -109,12 +129,36 @@
     "    Reply TERMINATE when everything is settled.\n",
     "    \"\"\"\n",
     ")\n",
+    "'''\n",
+    "system_message = dedent(\n",
+    "    f\"\"\"\n",
+    "    角色：专家投资者\n",
+    "    部门：财务\n",
+    "    主要职责：定制财务分析报告的生成\n",
+    "\n",
+    "    角色描述：\n",
+    "    作为财务领域的专家投资者，您的专长是开发定制的财务分析报告，以满足特定客户的需求。该角色要求深入研究财务报表和市场数据，发掘有关公司财务表现和稳定性的见解。直接与客户互动以收集必要的信息，并通过他们的反馈不断完善报告，确保最终产品完全符合他们的需求和期望。\n",
+    "\n",
+    "    主要目标：\n",
+    "\n",
+    "    分析精准：利用细致入微的分析能力解释财务数据，识别潜在趋势和异常情况。\n",
+    "    有效沟通：简化并有效传达复杂的财务叙述，使其对非专业观众易于理解和付诸行动。\n",
+    "    客户导向：根据客户反馈动态定制报告，确保最终分析与其战略目标一致。\n",
+    "    遵循卓越：在报告生成过程中保持最高质量和诚信标准，遵循既定的分析严格性基准。\n",
+    "    绩效指标：\n",
+    "    财务分析报告的效用通过其提供清晰、可操作的见解来衡量。这包括帮助企业决策、确定运营改进领域，并提供对公司财务健康状况的清晰评估。成功最终体现在报告对明智投资决策和战略规划的贡献上。\n",
+    "\n",
+    "    当一切就绪时，回复TERMINATE。\n",
+    "    \"\"\"\n",
+    ")\n",
+    "'''\n",
+    "\n",
     "expert = autogen.AssistantAgent(\n",
     "    name=\"Expert_Investor\",\n",
     "    system_message=system_message,\n",
     "    llm_config=llm_config,\n",
     "    is_termination_msg=lambda x: x.get(\"content\", \"\")\n",
-    "    and x.get(\"content\", \"\").endswith(\"TERMINATE\"),\n",
+    "    and x.get(\"content\", \"\").endswith(\"TERMINATE\"), # 结束标识\n",
     ")\n",
     "expert_shadow = autogen.AssistantAgent(\n",
     "    name=\"Expert_Investor_Shadow\",\n",
@@ -153,14 +197,33 @@
     "    ],\n",
     "    expert,\n",
     "    user_proxy,\n",
-    ")"
+    ")\n",
+    "\n",
+    "'''\n",
+    "```python\n",
+    "register_toolkits(\n",
+    "    [\n",
+    "        FMPUtils.get_sec_report,  # 获取SEC报告的URL和提交日期\n",
+    "        IPythonUtils.display_image,  # 在IPython中显示图片\n",
+    "        TextUtils.check_text_length,  # 检查文本长度\n",
+    "        ReportLabUtils.build_annual_report,  # 以设计的PDF格式构建年度报告\n",
+    "        ReportAnalysisUtils,  # 报告分析的专家知识\n",
+    "        ReportChartUtils,  # 报告图表绘制的专家知识\n",
+    "    ],\n",
+    "    expert,\n",
+    "    user_proxy,\n",
+    ")\n",
+    "```\n",
+    "'''"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this section, we introduce the **nested chat between the expert and the shadow**, which is triggered only when the expert gets response from function execution showing that an writing instruction and related context & resources are ready. The writing would then happen in this separate chat, the shadow (or call it the inner mind of expert) would do the financial writing based on the instruction and turn back to the expert. However, this chat is muted due to long context."
+    "In this section, we introduce the **nested chat between the expert and the shadow**, which is triggered only when the expert gets response from function execution showing that an writing instruction and related context & resources are ready. The writing would then happen in this separate chat, the shadow (or call it the inner mind of expert) would do the financial writing based on the instruction and turn back to the expert. However, this chat is muted due to long context.\n",
+    "\n",
+    "在这一部分，我们介绍了**专家和影子之间的嵌套对话**，这种对话仅在专家从函数执行中得到响应，显示写作指令和相关上下文与资源已准备好时触发。写作将在这个单独的对话中进行，影子（或称为专家的内心）将根据指令进行财务写作并返回给专家。然而，由于长上下文，这个对话被静音处理。"
    ]
   },
   {
@@ -196,7 +259,25 @@
     "        }\n",
     "    ],\n",
     "    trigger=order_trigger,\n",
-    ")"
+    ")\n",
+    "'''\n",
+    "```python\n",
+    "# 由于10-K部分不短，我们需要一个额外的嵌套对话来分析内容\n",
+    "expert.register_nested_chats(\n",
+    "    [\n",
+    "        {\n",
+    "            \"sender\": expert,\n",
+    "            \"recipient\": expert_shadow,\n",
+    "            \"message\": order_message,\n",
+    "            \"summary_method\": \"last_msg\",\n",
+    "            \"max_turns\": 2,\n",
+    "            \"silent\": True,  # 静音对话摘要\n",
+    "        }\n",
+    "    ],\n",
+    "    trigger=order_trigger,\n",
+    ")\n",
+    "```\n",
+    "'''"
    ]
   },
   {
@@ -228,7 +309,32 @@
     "---\n",
     "\n",
     "Now, let's see how our agent does.\n",
-    "\n"
+    "\n",
+    "\n",
+    "### 理解财务报告的资源\n",
+    "1. 损益表: [如何分析损益表](https://online.hbs.edu/blog/post/income-statement-analysis)\n",
+    "2. 资产负债表: [如何阅读资产负债表](https://online.hbs.edu/blog/post/how-to-read-a-balance-sheet)\n",
+    "3. 现金流量表: [如何阅读现金流量表](https://online.hbs.edu/blog/post/how-to-read-a-cash-flow-statement)\n",
+    "4. 年度报告: [如何阅读年度报告](https://online.hbs.edu/blog/post/how-to-read-an-annual-report)\n",
+    "\n",
+    "年度报告通常包括：\n",
+    "1. 致股东信：这些文件提供了公司全年活动和绩效的概述，并反映了其一般业务环境。年度报告通常包括CEO或总裁的股东信，并可能包含其他关键人物（如CFO）的信件。\n",
+    "2. [第7部分] 管理层讨论与分析（MD&A）：这是公司高管对公司绩效的详细分析。\n",
+    "3. [第8部分] 审计财务报表：这些是详细说明公司财务绩效的财务文件。常见的报表包括资产负债表、现金流量表、损益表和权益表。\n",
+    "4. [第8部分] 财务数据摘要：这是指与上述财务报表相关的任何注释或讨论。\n",
+    "5. [第8部分] 审计师报告：该报告描述了公司在准备财务报表时是否遵循了公认会计原则（GAAP）。\n",
+    "6. 会计政策：这是公司领导团队在准备年度报告和财务报表时所依赖的政策概述。\n",
+    "\n",
+    "回答以下问题：\n",
+    "1. 是否能够在债务到期时偿还\n",
+    "2. 年复一年的利润和/或亏损\n",
+    "3. 随着时间的推移是否以及如何增长\n",
+    "4. 维持或扩大业务所需的要求\n",
+    "5. 运营费用与产生的收入相比如何\n",
+    "\n",
+    "---\n",
+    "\n",
+    "现在，让我们看看我们的代理是如何表现的。"
    ]
   },
   {
@@ -813,11 +919,31 @@
     "    - All the paragraphs should combine between 400 and 450 words, don't generate the pdf until this is explicitly fulfilled.\n",
     "\"\"\"\n",
     ")\n",
+    "'''\n",
+    "```python\n",
+    "company = \"Microsoft\"\n",
+    "fyear = \"2023\"\n",
+    "work_dir = \"/mnt/data\"\n",
+    "\n",
+    "task = dedent(\n",
+    "    f\"\"\"\n",
+    "    使用你提供的工具，基于{company}的{fyear} 10-K报告撰写一份年度报告，并将其格式化为PDF。\n",
+    "    注意以下事项：\n",
+    "    - 在开始之前明确解释你的工作计划。\n",
+    "    - 为了清晰起见，逐一使用工具，特别是在请求指令时。\n",
+    "    - 所有文件操作应在\"{work_dir}\"中完成。\n",
+    "    - 生成的任何图片都应在聊天中显示。\n",
+    "    - 所有段落的总字数应在400到450字之间，明确满足此条件后再生成PDF。\n",
+    "    \"\"\"\n",
+    ")\n",
+    "```\n",
+    "'''\n",
     "\n",
     "with Cache.disk() as cache:\n",
     "    user_proxy.initiate_chat(\n",
     "        recipient=expert, message=task, max_turns=50, summary_method=\"last_msg\"\n",
-    "    )"
+    "    )\n",
+    "\n"
    ]
   },
   {
