--- a/tutorials_advanced/agent_fingpt_forecaster.ipynb
+++ b/tutorials_advanced/agent_fingpt_forecaster.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FinGPT-Forecaster Re-implemented with FinRobot"
+    "# FinGPT-Forecaster Re-implemented with FinRobot\n",
+    "\n",
+    "# FinGPT-Forecaster 使用 FinRobot 重新实现"
    ]
   },
   {
@@ -13,7 +15,11 @@
    "source": [
     "In this demo, we set up an agent to emulate the behavior of model in the fingpt-forecaster project with AutoGen, which takes a company's ticker symbol, recent basic financials and market news as input and predict its stock movements.\n",
     "\n",
-    "For detail of the original project, check out  [FinGPT-Forecaster](https://github.com/AI4Finance-Foundation/FinGPT/tree/master/fingpt/FinGPT_Forecaster)!  🔥[Demo](https://huggingface.co/spaces/FinGPT/FinGPT-Forecaster), [Medium Blog](https://medium.datadriveninvestor.com/introducing-fingpt-forecaster-the-future-of-robo-advisory-services-50add34e3d3c) & [Model](https://huggingface.co/FinGPT/fingpt-forecaster_dow30_llama2-7b_lora) on Huggingface🤗!"
+    "For detail of the original project, check out  [FinGPT-Forecaster](https://github.com/AI4Finance-Foundation/FinGPT/tree/master/fingpt/FinGPT_Forecaster)!  🔥[Demo](https://huggingface.co/spaces/FinGPT/FinGPT-Forecaster), [Medium Blog](https://medium.datadriveninvestor.com/introducing-fingpt-forecaster-the-future-of-robo-advisory-services-50add34e3d3c) & [Model](https://huggingface.co/FinGPT/fingpt-forecaster_dow30_llama2-7b_lora) on Huggingface🤗!\n",
+    "\n",
+    "在本演示中，我们设置了一个代理来模拟 FinGPT-Forecaster 项目中的模型行为，该代理使用 AutoGen，接收公司的股票代码、最近的基本财务信息和市场新闻作为输入，并预测其股票走势。\n",
+    "\n",
+    "有关原始项目的详细信息，请查看 [FinGPT-Forecaster](https://github.com/AI4Finance-Foundation/FinGPT/tree/master/fingpt/FinGPT_Forecaster)!  🔥[演示](https://huggingface.co/spaces/FinGPT/FinGPT-Forecaster), [Medium 博客](https://medium.datadriveninvestor.com/introducing-fingpt-forecaster-the-future-of-robo-advisory-services-50add34e3d3c) 和 [模型](https://huggingface.co/FinGPT/fingpt-forecaster_dow30_llama2-7b_lora) 在 Huggingface🤗!"
    ]
   },
   {
@@ -35,7 +41,12 @@
    "source": [
     "After importing all the necessary packages and functions, we first instantiate a market analysis assistant and a user proxy using the agent classes defined by AutoGen. We also need the config for OpenAI & Finnhub here. \n",
     "- for openai configuration, rename OAI_CONFIG_LIST_sample to OAI_CONFIG_LIST and replace the api keys\n",
-    "- for finnhub configuration, rename config_api_keys_sample to config_api_keys and replace the api keys"
+    "- for finnhub configuration, rename config_api_keys_sample to config_api_keys and replace the api keys\n",
+    "\n",
+    "在导入所有必要的软件包和函数后，我们首先使用 AutoGen 定义的代理类实例化一个市场分析助手和一个用户代理。我们还需要配置 OpenAI 和 Finnhub。\n",
+    "\n",
+    "- 对于 OpenAI 配置，将 `OAI_CONFIG_LIST_sample` 重命名为 `OAI_CONFIG_LIST` 并替换 API 密钥\n",
+    "- 对于 Finnhub 配置，将 `config_api_keys_sample` 重命名为 `config_api_keys` 并替换 API 密钥"
    ]
   },
   {
@@ -68,6 +79,19 @@
     "    llm_config=llm_config,\n",
     ")\n",
     "\n",
+    "'''\n",
+    "```python\n",
+    "analyst = autogen.AssistantAgent(\n",
+    "    name=\"Market_Analyst\",\n",
+    "    system_message=(\n",
+    "        \"作为市场分析师，必须具备强大的分析和解决问题的能力，收集必要的财务信息，并根据客户的需求进行汇总。\"\n",
+    "        \"对于编码任务，只使用你提供的函数。任务完成后回复 TERMINATE。\"\n",
+    "    ),\n",
+    "    llm_config=llm_config,\n",
+    ")\n",
+    "```\n",
+    "'''\n",
+    "\n",
     "user_proxy = autogen.UserProxyAgent(\n",
     "    name=\"User_Proxy\",\n",
     "    is_termination_msg=lambda x: x.get(\"content\", \"\") and x.get(\n",
@@ -87,7 +111,11 @@
    "source": [
     "Then we register our predefined functions with the userproxy.\n",
     "\n",
-    "Following our implementation with the fingpt-forecaster, we combined news/financials calls to the Finnhub API and stock data calls to the YFinance API."
+    "Following our implementation with the fingpt-forecaster, we combined news/financials calls to the Finnhub API and stock data calls to the YFinance API.\n",
+    "\n",
+    "然后，我们将预定义的函数注册到userproxy。\n",
+    "\n",
+    "根据我们在fingpt-forecaster上的实现，我们将新闻/财务调用合并到Finnhub API，并将股票数据调用合并到YFinance API。"
    ]
   },
   {
@@ -120,6 +148,31 @@
     "        \"description\": \"retrieve stock price data for designated ticker symbol\"\n",
     "    }\n",
     "]\n",
+    "'''\n",
+    "tools = [\n",
+    "    {\n",
+    "        \"function\": FinnHubUtils.get_company_profile,\n",
+    "        \"name\": \"get_company_profile\",\n",
+    "        \"description\": \"获取公司简介信息\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"function\": FinnHubUtils.get_company_news,\n",
+    "        \"name\": \"get_company_news\",\n",
+    "        \"description\": \"检索与指定公司相关的市场新闻\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"function\": FinnHubUtils.get_basic_financials,\n",
+    "        \"name\": \"get_financial_basics\",\n",
+    "        \"description\": \"获取指定公司最新的财务基础信息\"\n",
+    "    },\n",
+    "    {\n",
+    "        \"function\": YFinanceUtils.get_stock_data,\n",
+    "        \"name\": \"get_stock_data\",\n",
+    "        \"description\": \"检索指定股票代码的股票价格数据\"\n",
+    "    }\n",
+    "]\n",
+    "\n",
+    "'''\n",
     "register_toolkits(tools, analyst, user_proxy)"
    ]
   },
