--- a/tutorials_advanced/agent_trade_strategist.ipynb
+++ b/tutorials_advanced/agent_trade_strategist.ipynb
@@ -11,7 +11,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this demo, we introduce an agent that write trading strategy and refine it throught backtesting using the **BackTrader** library."
+    "In this demo, we introduce an agent that write trading strategy and refine it throught backtesting using the **BackTrader** library.\n",
+    "\n",
+    "在本演示中，我们介绍了一个使用**BackTrader**库编写交易策略并通过回测优化策略的代理。"
    ]
   },
   {
