--- a/tutorials_advanced/lmm_agent_mplfinance.ipynb
+++ b/tutorials_advanced/lmm_agent_mplfinance.ipynb
@@ -13,7 +13,12 @@
    "source": [
     "In this demo, we set up an multimodal agent with GPT-4V using the **MultimodalConversableAgent** provided in AutoGen.\n",
     "\n",
-    "With the vision capability introduced by multimodal agents, we can analyse stock's performance through With the visual capabilities provided by the multimodal agent, we can, like regular investors, display the stock price fluctuations and trading volume of a stock over a certain period using the plotting capabilities provided by mplfinance, all on one image. Then we analyze its subsequent trend."
+    "With the vision capability introduced by multimodal agents, we can analyse stock's performance through With the visual capabilities provided by the multimodal agent, we can, like regular investors, display the stock price fluctuations and trading volume of a stock over a certain period using the plotting capabilities provided by mplfinance, all on one image. Then we analyze its subsequent trend.\n",
+    "\n",
+    "\n",
+    "在这个演示中，我们使用AutoGen提供的**MultimodalConversableAgent**设置了一个具有GPT-4V的多模态代理。\n",
+    "\n",
+    "通过多模态代理引入的视觉能力，我们可以像普通投资者一样，通过mplfinance提供的绘图功能，在一张图像上显示某段时间内股票价格的波动和交易量。然后我们分析其后续趋势。\n"
    ]
   },
   {
@@ -71,7 +76,12 @@
     "For this task, we need:\n",
     "- A normal llm agent as data provider: Call charting functions and provide instructions for multimodal agent\n",
     "- A multimodal agent as market analyst: Extract the necessary information from the chart and analyze the future trend of this stock.\n",
-    "- A user proxy to execute python functions and control the conversations."
+    "- A user proxy to execute python functions and control the conversations.\n",
+    "\n",
+    "对于这个任务，我们需要：\n",
+    "- 一个普通的LLM代理作为数据提供者：调用绘图函数并为多模态代理提供指令。\n",
+    "- 一个多模态代理作为市场分析师：从图表中提取必要的信息并分析该股票的未来趋势。\n",
+    "- 一个用户代理来执行Python函数并控制对话。\n"
    ]
   },
   {
@@ -115,7 +125,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To improve operational efficiency, we equip the data provider with our predefined tools for plotting using the `mplfinance` library and for retrieving recent market news using `Finnhub`. This approach prevents the agent from consuming extra tokens to write the functions they need."
+    "To improve operational efficiency, we equip the data provider with our predefined tools for plotting using the `mplfinance` library and for retrieving recent market news using `Finnhub`. This approach prevents the agent from consuming extra tokens to write the functions they need.\n",
+    "\n",
+    "为了提高操作效率，我们为数据提供者配备了预定义的工具，用于使用`mplfinance`库绘图和使用`Finnhub`获取最新的市场新闻。这样可以防止代理消耗额外的tokens来编写所需的函数。\n"
    ]
   },
   {
@@ -145,7 +157,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To prevent unexpected chat sequence arrangements in group chats, we opt for manual orchestration for this task. After the data provider supplies the data, the user proxy summarizes it and then presents it to the Multimodal market analyst for analysis."
+    "To prevent unexpected chat sequence arrangements in group chats, we opt for manual orchestration for this task. After the data provider supplies the data, the user proxy summarizes it and then presents it to the Multimodal market analyst for analysis.\n",
+    "\n",
+    "为了防止在群聊中出现意外的聊天顺序安排，我们选择手动编排此任务。在数据提供者提供数据后，用户代理对其进行总结，然后将其呈现给多模态市场分析师进行分析。\n"
    ]
   },
   {
@@ -381,7 +395,34 @@
     "            }\n",
     "        ]\n",
     "    )\n",
+    "'''\n",
+    "autogen.initiate_chats(\n",
+    "    [\n",
+    "        {\n",
+    "            \"sender\": user_proxy,\n",
+    "            \"recipient\": data_provider,\n",
+    "            \"message\": dedent(f\"\"\"\n",
+    "            收集截至{get_current_date()}有关{company}的信息，包括其最近的市场新闻和股票价格走势的蜡烛图。将图表保存在`{working_dir}/result.jpg`中。\n",
+    "            \"\"\"),  # 由于目前AutoGen在使用函数调用时不尊重`work_dir`的错误，我们必须指定目录\n",
+    "            \"clear_history\": True,\n",
+    "            \"silent\": False,\n",
+    "            \"summary_method\": \"last_msg\",\n",
+    "        },\n",
+    "        {\n",
+    "            \"sender\": user_proxy,\n",
+    "            \"recipient\": market_analyst,\n",
+    "            \"message\": dedent(f\"\"\"\n",
+    "            根据提供的股票价格图表以及{company}的最近市场新闻，分析股票的最近波动及其与市场新闻的潜在关系。提供你对该股票在接下来一周走势的预测分析。任务完成后回复TERMINATE。\n",
+    "            \"\"\"),\n",
+    "            \"max_turns\": 1,  # 对话的最大轮数\n",
+    "            \"summary_method\": \"last_msg\",\n",
+    "            # 为了稳定性进行的调整\n",
+    "            \"carryover\": f\"<img {working_dir}/result.jpg>\"\n",
+    "        }\n",
+    "    ]\n",
+    ")\n",
     "\n",
+    "'''\n",
     "img = Image.open(f\"{working_dir}/result.jpg\")\n",
     "plt.imshow(img)\n",
     "plt.axis(\"off\")  # Hide the axes\n",
