--- a/tutorials_advanced/agent_annual_report.ipynb
+++ b/tutorials_advanced/agent_annual_report.ipynb
@@ -923,7 +923,7 @@
     "```python\n",
     "company = \"Microsoft\"\n",
     "fyear = \"2023\"\n",
-    "work_dir = \"/mnt/data\"\n",
+    "work_dir = \"../report\"\n",
     "\n",
     "task = dedent(\n",
     "    f\"\"\"\n",
@@ -937,6 +937,7 @@
     "    \"\"\"\n",
     ")\n",
     "```\n",
+    "recipient：收件人\n",
     "'''\n",
     "\n",
     "with Cache.disk() as cache:\n",
