--- a/tutorials_advanced/agent_trade_strategist.ipynb
+++ b/tutorials_advanced/agent_trade_strategist.ipynb
@@ -38,7 +38,12 @@
    "source": [
     "After importing all the necessary packages and functions, we need the config for OpenAI here. \n",
     "- for openai configuration, rename OAI_CONFIG_LIST_sample to OAI_CONFIG_LIST and replace the api keys\n",
-    "- for the work_dir of coding, we use the default path defined."
+    "- for the work_dir of coding, we use the default path defined.\n",
+    "\n",
+    "导入所有必要的包和函数后，我们需要配置OpenAI。\n",
+    "\n",
+    "- 对于OpenAI配置，将 `OAI_CONFIG_LIST_sample` 重命名为 `OAI_CONFIG_LIST` 并替换API密钥。\n",
+    "- 对于编码的工作目录，我们使用默认定义的路径。"
    ]
   },
   {
@@ -75,7 +80,13 @@
     "- A user proxy to execute python functions and control the conversations.\n",
     "- A trade strategist who writes **BackTrader** style trade strategy and can optimize them through backtesting.\n",
     "\n",
-    "In the following cell, we define the two agents, and equip them with necessary tools."
+    "In the following cell, we define the two agents, and equip them with necessary tools.\n",
+    "\n",
+    "对于这个任务，我们需要：\n",
+    "- 一个用户代理来执行Python函数并控制对话。\n",
+    "- 一个交易策略师，他能够编写**BackTrader**风格的交易策略并通过回测来优化它们。\n",
+    "\n",
+    "在下面的代码单元中，我们定义了这两个代理，并为他们配备了必要的工具。\n"
    ]
   },
   {
@@ -99,6 +110,19 @@
     "    llm_config=llm_config,\n",
     "    \n",
     ")\n",
+    "'''\n",
+    "system_message = dedent(f\"\"\"\n",
+    "        你是一位以开发复杂交易算法而闻名的交易策略师。\n",
+    "        你的任务是利用你的编程技能，使用BackTrader Python库创建一个自定义交易策略，并将其保存为Python模块。\n",
+    "        请记得在策略中记录必要的信息，以便进行进一步分析。\n",
+    "        你还可以编写自定义的尺寸调整器/指标并将其保存为模块，这将允许你生成更复杂的策略。\n",
+    "        创建策略后，你可以使用提供的工具进行回测，以评估其性能并进行必要的调整。\n",
+    "        你在编程过程中创建的所有文件将自动保存在`{work_dir}`中，无需指定前缀。\n",
+    "        但是在调用回测函数时，模块路径应类似于`{work_dir.strip('/')}.<module_path>`，保存图表路径时也应考虑`{work_dir}`。\n",
+    "        当策略准备好测试时，回复TERMINATE给执行者。\n",
+    "        \"\"\")\n",
+    "\n",
+    "'''\n",
     "user_proxy = autogen.UserProxyAgent(\n",
     "    name=\"User_Proxy\",\n",
     "    is_termination_msg=lambda x: x.get(\"content\", \"\") and x.get(\"content\", \"\").endswith(\"TERMINATE\"),\n",
@@ -120,7 +144,11 @@
    "source": [
     "Now it's time to see what strategy can the agent provide.\n",
     "\n",
-    "Don't expect too high as indicators are limited and the agent sees limited analysis. Let's hope we won't lose money through this."
+    "Don't expect too high as indicators are limited and the agent sees limited analysis. Let's hope we won't lose money through this.\n",
+    "\n",
+    "现在是时候看看代理可以提供什么策略了。\n",
+    "\n",
+    "不要期望太高，因为指标有限，代理看到的分析也有限。希望我们不会亏钱。\n"
    ]
   },
   {
@@ -892,7 +920,14 @@
     "    Modify the code to optimize your strategy or try more different indicators / sizers into account for better performance.\n",
     "    Your strategy should at least outperform the benchmark strategy of buying and holding the stock.\n",
     "\"\"\")\n",
+    "'''\n",
+    "任务是基于{company}的股票数据，从{start_date}到{end_date}，开发一个在这只股票上表现良好的交易策略。\n",
+    "如果需要的话，可以编写自己的自定义指标/尺寸调整器。其他回测设置如初始现金等由你决定。\n",
+    "每次回测后，显示保存的回测结果图表，然后报告当前情况并提出优化建议。\n",
+    "修改代码以优化你的策略，或尝试更多不同的指标/尺寸调整器，以获得更好的表现。\n",
+    "你的策略至少应该优于买入并持有股票的基准策略。\n",
     "\n",
+    "'''\n",
     "with Cache.disk() as cache:\n",
     "    user_proxy.initiate_chat(\n",
     "        recipient=strategist,\n",
