--- a/tutorials_advanced/agent_fingpt_forecaster.ipynb
+++ b/tutorials_advanced/agent_fingpt_forecaster.ipynb
@@ -528,7 +528,14 @@
     "        \"with 2-4 most important factors respectively and keep them concise. Most factors should be inferred from company related news. \"\n",
     "        f\"Then make a rough prediction (e.g. up/down by 2-3%) of the {company} stock price movement for next week. Provide a summary analysis to support your prediction.\",\n",
     "        cache=cache,\n",
-    "    )"
+    "    )\n",
+    "    '''\n",
+    "    message = (\n",
+    "        f\"使用提供的所有工具来检索截至{get_current_date()}的{company}的相关信息。分析{company}的积极发展和潜在问题，\"\n",
+    "        \"分别列出2-4个最重要的因素，并保持简洁。大多数因素应从公司相关新闻中推断出来。\"\n",
+    "        f\"然后对{company}的股票价格在下周的走势进行粗略预测（例如上涨/下跌2-3%）。提供支持你预测的总结分析。\"\n",
+    "    )\n",
+    "    '''"
    ]
   }
  ],
